tests/arch/riscv/error/compiler/test_riscv_error_compiler_019.out


Error: found `identifier (x)` but expected `,`, `\n`, `binary operator`, or `end of input`
   ╭─[ assembly:7:12 ]
   │
 7 │     .byte 0x
   │           ┬┬  
   │           ╰─── While parsing this `expression`
   │            │  
   │            ╰── Unexpected input
───╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

